LU-7178 quota: fixed incorrect memset

The memset was done on a structure using the size of another unrelated
structure.

Added a few cosmetic changes: removed an extra word in function
description and fixed a couple formatting issues.

Signed-off-by: frank zago <fzago@cray.com>
Change-Id: Ib1da9292037b1e5ef10c93f2fd871488861bd05e
Reviewed-on: http://review.whamcloud.com/16482
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>